--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,8 @@ h4 {
 
 body {
   font-size: medium;
+  background: #000;
+  color: #fff;
   /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
